--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@next/font": "13.1.0",
+    "@tensorflow/tfjs": "^4.1.0",
     "daisyui": "^2.46.0",
     "lottie-react": "^2.3.1",
+    "mongodb": "^4.13.0",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-tensorflow": "^2.2.0",
-    "swiper": "^8.4.5",
-    "@tensorflow/tfjs": "^4.1.0"
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
