--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.0",
     "@tensorflow/tfjs": "^4.1.0",
+    "@tensorflow/tfjs-node": "^4.2.0",
     "daisyui": "^2.46.0",
     "lottie-react": "^2.3.1",
     "mongodb": "^4.13.0",
