--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lottie-react": "^2.3.1",
     "mongodb": "^4.13.0",
     "next": "13.1.0",
+    "next-auth": "^4.18.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
