--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tensorflow/tfjs": "^4.1.0",
     "@tensorflow/tfjs-node": "^4.2.0",
     "daisyui": "^2.46.0",
+    "firebase": "^9.16.0",
     "lottie-react": "^2.3.1",
     "mongodb": "^4.13.0",
     "next": "13.1.0",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-tensorflow": "^2.2.0",
+    "react-toastify": "^9.1.1",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
