--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@tensorflow/tfjs": "^4.1.0",
     "@tensorflow/tfjs-node": "^4.2.0",
     "daisyui": "^2.46.0",
+    "date-fns": "^2.29.3",
     "firebase": "^9.16.0",
     "lottie-react": "^2.3.1",
     "mongodb": "^4.13.0",
     "next": "13.1.0",
     "next-auth": "^4.18.10",
     "react": "18.2.0",
+    "react-day-picker": "^8.5.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-tensorflow": "^2.2.0",
