--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "mongodb": "^4.13.0",
     "next": "13.1.0",
     "next-auth": "^4.18.10",
+    "node-sass": "^8.0.0",
     "react": "18.2.0",
     "react-day-picker": "^8.5.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-tensorflow": "^2.2.0",
     "react-toastify": "^9.1.1",
+    "sass": "^1.58.0",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
