--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^2.46.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.16.0",
+    "gsap": "^3.11.5",
     "lottie-react": "^2.3.1",
     "mongodb": "^4.13.0",
     "next": "13.1.0",
