--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.0",
+    "@sashido/teachablemachine-node": "^1.2.2",
     "@tanstack/react-query": "^4.29.5",
     "@tensorflow/tfjs": "^4.1.0",
     "daisyui": "^2.46.0",
