--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "date-fns": "^2.29.3",
     "firebase": "^9.16.0",
     "gsap": "^3.11.5",
-    "lottie-react": "^2.3.1",
     "mongodb": "^4.13.0",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-day-picker": "^8.5.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-lottie": "^1.2.10",
     "react-quill": "^2.0.0",
     "react-tensorflow": "^2.2.0",
     "react-toastify": "^9.1.1",
