--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-tensorflow": "^2.2.0",
     "react-toastify": "^9.1.1",
     "sass": "^1.58.0",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
